Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4573

UNINSTALL PLUGIN misleading error message for non-dynamic plugins

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.31
    • 5.5.32
    • None
    • None
    • Linux

    Description

      This is the same bug as filled against MySQL:
      http://bugs.mysql.com/bug.php?id=51771

      Also MariaDB has really weird message when we try to uninstall non-dynamic plugin.

      MariaDB [test]> uninstall plugin innodb;
      ERROR 1305 (42000): PLUGIN innodb does not exist

      It would be better to give users a better hint where the problem is.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            hhorak Honza Horak
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 35m
                35m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.