MDEV-4573 UNINSTALL PLUGIN misleading error message for non-dynamic plugins

change WARN_PLUGIN_DELETE_BUILTIN to ER_PLUGIN_DELETE_BUILTIN